# PySkinDose

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  OnTable.py  PhantomImport.py  Pipfile  README.md  Untitled-1  VisualOutput.py  azure-pipelines.yml  beam_class.py  build_documentation.bat  corrections.py  corrections_old.py  db_connect.py  dose.py  geom_calc.py  geom_init.py  geom_init_simulation.py  geom_init_single.py  geom_plot.py  geometry.py  geomplot.py  geomtrack.py  main.py  new_main.py  parse_data.py  phantom_class.py  phantom_import.py  plotly_plots.py  plots.py  pyproject.toml  requirements.txt  scratch_geom_init.py  settings.example.py  settings.py  settings_example.json  setup.py  standard_bin.stl
.github/workflows/: ci.yml  release.yml
RDSR_data/: P1.dcm  S1  T43.dcm
docs/: requirements.txt
docs/source/: conf.py  index.md  index.rst  modules.rst  pyskindose.calculate_dose.rst  pyskindose.helpers.rst  pyskindose.plotting.rst  pyskindose.rst  pyskindose.settings.rst
docs/source/_static/: my-styles.css
docs/source/getting_started/: getting_started.ipynb
docs/source/user/: background.md  contribute.md  contribute.rst  description.md  description.rst  get_started.rst  install.md  interactive_plots.rst  static_plots.md  static_plots.rst  user_guide.md
phantom_data/: Tman_flat.stl  adult_female.stl  adult_male.stl  adult_male_90.stl  adult_male_flat.stl  junior_male.stl  ttt.stl
src/: table_translation.json
src/pyskindose/: __init__.py  analyze_data.py  beam_class.py  constants.py  corrections.db  corrections.py  db_connect.py  dev_data.py  dose.py  format_export_data.py  geom_calc.py  getting_started.ipynb  main.py  normalization_settings.json  parse_data.py  phantom_class.py  plots.py  rdsr_normalizer.py  rdsr_parser.py  settings.py  settings_example.json  settings_normalization.py  settings_pyskindose.py  user_defined_parameters.py
src/pyskindose/calculate_dose/: add_correction_and_event_dose_to_output.py  calculate_dose.py  calculate_irradiation_event_result.py  perform_calculations_for_new_geometries.py
src/pyskindose/getting_started/: getting_started.ipynb
src/pyskindose/helpers/: calculate_rotation_matrices.py  create_attributes_string.py  parse_settings_to_settings_class.py  read_and_normalize_rdsr_data.py
src/pyskindose/phantom_data/: adult_female.stl  adult_female_reduced_1000t.stl  adult_male.stl  adult_male_80.stl  adult_male_reduced_1000t.stl  hudfrid.stl  hudfrid_reduced_1000t.stl  junior_female.stl  junior_female_reduced_1000t.stl  junior_male.stl  junior_male_reduced_1000t.stl  senior_female.stl  senior_female_reduced_1000t.stl  senior_male.stl  senior_male_reduced_1000t.stl
src/pyskindose/plotting/: create_dose_map_plot.py  create_geometry_plot.py  create_geometry_plot_texts.py  create_irradiation_event_procedure_plot_data.py  create_layout_for_dose_map_plots.py  create_mesh3d.py  create_notebook_dose_map_plot.py  create_plot_and_save_to_file.py  create_ploty_ijk_indices.py  create_setup_and_event_plot.py  create_wireframes.py  get_camera_view.py  get_visual_offset.py  plot_event.py  plot_geometry.py  plot_procedure.py  plot_settings.py  plot_setup.py
src/pyskindose/settings/: __init__.py  (+9 more)
table_data/: KS_table_concatenated.csv  table_transmission.csv  u_interpolated.csv
tests/integrationtests/: conftest.py  test_calculate_rotation_matrices.py  test_corrections.py  test_rdsr_normalizer.py  test_rdsr_parser.py
tests/manual_tests/: azurion.py  base_dev_settings.py  manual_test_all_modes.py  manual_test_calculate_dose.py  manual_test_calculate_dose_interactive.py  manual_test_calculate_dose_static.py  manual_test_plot_event.py  manual_test_plot_procedure.py  manual_test_plot_procedure_beam_and_detector_rotations.py  manual_test_plot_procedure_beam_collimations.py  manual_test_plot_procedure_beam_rotations.py  manual_test_plot_procedure_table_rotations.py  manual_test_plot_procedure_table_translations.py  manual_test_plot_setup.py  manual_test_table_correction.py  notebook_test_calculate_dose.ipynb  notebook_test_plot_event.ipynb
tests/unittests/: test_corrections.py  test_geom_calc.py  test_positioning.py  test_rdsr_parsing.py  test_settings.py
(+47 files in other folders)
